--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "kat-blog",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Kat-Blog",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
@@ -15,17 +15,14 @@
   },
   "dependencies": {
     "gatsby": "^2.24.85",
+    "gatsby-plugin-sass": "^2.3.21",
+    "gatsby-source-filesystem": "^2.3.37",
+    "gatsby-transformer-remark": "^2.8.46",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
