--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^2.24.85",
+    "gatsby-plugin-antd": "^2.2.0",
     "gatsby-plugin-sass": "^2.3.21",
     "gatsby-source-filesystem": "^2.3.37",
     "gatsby-transformer-remark": "^2.8.46",
