--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "gatsby": "^2.24.85",
     "gatsby-plugin-antd": "^2.2.0",
     "gatsby-plugin-sass": "^2.3.21",
