--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@deckdeckgo/highlight-code": "^2.1.1",
     "gatsby": "^2.24.85",
     "gatsby-plugin-antd": "^2.2.0",
     "gatsby-plugin-sass": "^2.3.21",
+    "gatsby-remark-highlight-code": "^2.1.0",
     "gatsby-source-filesystem": "^2.3.37",
     "gatsby-transformer-remark": "^2.8.46",
     "node-sass": "^4.14.1",
