--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@deckdeckgo/highlight-code": "^2.1.1",
     "gatsby": "^2.24.85",
     "gatsby-plugin-antd": "^2.2.0",
+    "gatsby-plugin-manifest": "^2.11.0",
     "gatsby-plugin-sass": "^2.3.21",
     "gatsby-remark-highlight-code": "^2.1.0",
     "gatsby-source-filesystem": "^2.3.37",
