--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "gatsby": "^2.24.85",
     "gatsby-plugin-antd": "^2.2.0",
     "gatsby-plugin-manifest": "^2.11.0",
+    "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-sass": "^2.3.21",
     "gatsby-remark-highlight-code": "^2.1.0",
     "gatsby-source-filesystem": "^2.3.37",
     "gatsby-transformer-remark": "^2.8.46",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
